# Server-back

./: CMakeLists.txt  README.md  main.cpp
Configs/: CMakeLists.txt  config_interface.hpp  configs.cpp  configs.hpp  configs_manager.hpp  configs_manager.tpp
Configs/definitions/Reader/: config.yaml
Configs/definitions/Server/: config.yaml
Configs/definitions/ThreadPool/: config.yaml
Configs/structures/Reader/: reader.cpp  reader.hpp  reader_info.cpp  reader_info.hpp
Configs/structures/Server/: server.cpp  server.hpp  server_info.cpp  server_info.hpp
Configs/structures/ThreadPool/: thread_pool.cpp  thread_pool.hpp  thread_pool_info.cpp  thread_pool_info.hpp
DataManager/: CMakeLists.txt  data_manager.cpp  data_manager.hpp
Matr/: CMakeLists.txt  matr.cpp  matr.hpp
Server/: CMakeLists.txt  address.cpp  address.hpp  native_types.hpp  reader.cpp  reader.hpp  server.cpp  server.hpp  server_base.cpp  server_base.hpp  socket.cpp  socket.hpp  thread_pool.cpp  thread_pool.hpp
Server/Core/: server_base.cpp  server_base.hpp
Server/Core/TaskProcessor/: task_processor.cpp  task_processor.hpp
Server/Core/TaskProcessor/ThreadPool/: thread_pool.cpp  thread_pool.hpp
Server/Reader/: reader.cpp  reader.hpp
ServicesLists/: ConfigsList.hpp  TagsList.hpp
Tags/: CMakeLists.txt  Tags.hpp
Utils/: CMakeLists.txt  exceptions.hpp  literal_operators.cpp  literal_operators.hpp  memory.cpp  memory.hpp  server_utils.cpp  server_utils.hpp  type_traits.hpp
Utils/Containers/: multi_index_container.hpp  types_container.hpp
Utils/Exceptions/: file_exceptions.hpp
